--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "bootstrap": "^5.3.8",
-    "lodash": "^4.17.21"
+    "express": "^5.2.1",
+    "lodash": "^4.17.21",
+    "nodemon": "^3.1.11"
   }
 }
